Update project dependencies and refactor code for clarity: Downgraded Spring Boot version to 2.7.18 and updated Java compiler settings to 1.8. Refactored various classes to replace stream operations with traditional loops for better readability, including TokenValidationService, TokenSelectionService, and PostValidationRuleService. Adjusted import statements from Jakarta to Javax for validation annotations. Enhanced exception handling and logging in GlobalExceptionHandler and TokenProcessingService. Improved iterator usage in GlobalRetryState and InMemoryAuthenticationContextRepository for better performance.